force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <label>Territory</label>
    <nameField>
        <label>Territory Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>