force-app/main/default/objects/Territory__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <formula>Owner:User.Manager.Manager_Name__c</formula>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>