force-app/main/default/objects/Territory__c/fields/Territory_Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Coupon_Code__c</fullName>
    <label>Territory Coupon Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>