force-app/main/default/objects/Territory__c/fields/Territory_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Owner Role</label>
    <type>Text</type>
</CustomField>