force-app/main/default/objects/Territory__c/fields/Territory_State__c.field-meta.xml
<CustomField>
    <fullName>Territory_State__c</fullName>
    <label>Territory_State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>