force-app/main/default/objects/Territory__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <label>Territory Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HY</fullName>
            </value>
            <value>
                <fullName>AQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>